2003-12-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Changes in "What is New in 4.0".

	* src/mouse.c (bind_display): Minor change in the hotkey help.

	* term/post.trm (START_HELP): Fixed undefined references in gnuplot.tex.

	* src/gplt_x11.c: #if (USE_MOUSE && MOUSE_ALL_WINDOWS) =>
	#if defined(...) && defined(...)

2003-12-15  Ethan Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in demo/webify.pl demo/airfoil.dem demo/prob2.dem:
	Integrate generation of demo web pages into the Makefile, so that
	'make html' autogenerates most of them.  A few oddball scripts need
	to be processed by hand.

2003-12-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Lauris Kaplinski <lauris@users.sourceforge.net>
	diagnosed that the reason gnuplot point styles were not displaying 
	properly in some svg applications was our failure to specify the 
	xlink: namespace.

	* term/post.trm:  PS_filled_polygon() must flush current path on 
	entry if there is one.  This fixes the missing arrow-shaft problems
	seen in arrowstyle.dem.  It is possible that the awk scripts in
	pm3d/contrib need to be modified to parse the resulting "stroke"
	command.

2003-12-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.os2: Lowercased IF EXIST and DEL commands (there is
	a make.exe program reported to dislike uppercases).

2003-12-15  Petr Mikulik  <mikulik@physics.muni.cz>

        * src/gplt_x11.c:
        (getMultiTabConsoleSwitchCommand): New routine to return system command
        to switch to the appropriate "tab" of a multitab console window where
        gnuplot is running. Currently implemented for KDE's Konsole (it returns
        a "dcop" command).
        (process_event): Let hotkey "<space>" in gnuplot_x11 work also in
	gnuplot running in multitab KDE's Konsole.

2003-12-15  Andrey V. Panov  <panov@iacp.dvo.ru>

	* NEWS docs/gnuplot.doc src/term_api.h src/term.c src/gplt_x11.c